--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@types/node": "17.0.7",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.1",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7",
+    "eslint": "^8.6.0",
+    "eslint-config-next": "^12.0.7",
     "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.0.11",
     "typescript": "4.5.4"
   }
