--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.0.8",
     "@types/node": "17.0.7",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "autoprefixer": "^10.4.1",
+    "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.11",
