--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^5.6.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.8",
@@ -20,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "autoprefixer": "^10.4.1",
+    "eslint": "^8.6.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
